fix: alignment of elements in delete post button container

--- a/logbook/src/main/webapp/css/posts.css
+++ b/logbook/src/main/webapp/css/posts.css
@@ -64,6 +64,10 @@
   margin-right: auto;
 }
 
+#delete-post-button {
+  flex-flow: column;
+}
+
 #delete-post-button input {
   background: #ee5f66;
 }
